hphp/test/zend/bad/ext/standard/tests/streams/bug49936_win32.php
<?php
ini_set('default_socket_timeout', 2);


$dir = 'ftp://your:self@localhost/';

var_dump(opendir($dir));
var_dump(opendir($dir));

?>